<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:id="@+id/simple_note_creation_linear_layout"
        android:background="@color/colorNoteDefault"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_toolbar"
        android:orientation="vertical">

        <EditText
            android:paddingTop="8dp"
            android:paddingStart="12dp"
            android:id="@+id/title_edit_text"
            android:inputType="textCapSentences"
            android:hint="@string/title_placeholder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:focusable="true"
            android:focusedByDefault="false"
            android:focusableInTouchMode="true"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/tags_edit_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/holo_blue_light"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="false"
            android:gravity="top|left"
            android:hint="@string/note_placeholder"
            android:inputType="textCapSentences|textMultiLine"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:scrollbars="vertical"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="522dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="false"
            android:gravity="top|left"
            android:hint="@string/note_placeholder"
            android:inputType="textCapSentences|textMultiLine"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:scrollbars="vertical"
            tools:ignore="RtlHardcoded,RtlSymmetry" />




    </LinearLayout>


    <LinearLayout
        android:id="@+id/note_actions_layout"
        android:layout_above="@id/bottom_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/color_scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:scrollbars="none"
            android:fillViewport="true" >


        </HorizontalScrollView>

    </LinearLayout>



    <View
    android:layout_width="match_parent"
    android:layout_above="@id/bottom_toolbar"
    android:layout_height="1dp"
    android:background="#60545454" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_toolbar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="50dp"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/note_types_button"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_icon_plus"
                android:contentDescription="@string/note_types" />

            <TextView
                android:id="@+id/last_modification_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:textAllCaps="false"
                android:textColor="@color/colorHint"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/last_modification_date" />

            <ImageButton
                android:id="@+id/note_actions_button"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_icon_three_dot"
                android:contentDescription="@string/note_actions" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
