<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="667dp"
        android:layout_above="@+id/footer"
        android:fillViewport="true"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

    </ScrollView>

    <TableLayout
        android:id="@+id/footer"
        android:background="@color/colorBottomToolbar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0" >

        <TableRow
            android:id="@+id/firstRow"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/create_new_note1"
                android:layout_width="162dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/create_new_note"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorHint" />

            <Button
                android:id="@+id/sort_by_title"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="sortByTitle"
                android:text="@string/sort_by_title"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorNoteCyan" />

            <Button
                android:id="@+id/sort_by_date"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="sortByDate"
                android:text="@string/sort_by_date"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorNoteCyan" />


        </TableRow>

    </TableLayout>




</RelativeLayout>
